k8s/client.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pfp-pfp-client
spec:
  selector:
    matchLabels:
      app: pfp-pfp-client
      tier: backend
  replicas: 2
  template:
    metadata:
      labels:
        app: pfp-pfp-client
        tier: backend
    spec:
      containers:
        - name: pfp-pfp-client
          image: finchcontainerregistry.azurecr.io/pfp_pfp_client:0318559997d4e2fa6e8b208e5df35c6470077941
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 80
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"
