k8s/server.deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pfp-pfp-server
spec:
  selector:
    matchLabels:
      app: pfp-pfp-server
      tier: backend
  replicas: 2
  template:
    metadata:
      labels:
        app: pfp-pfp-server
        tier: backend
    spec:
      containers:
        - name: pfp-pfp-server
          image: finchcontainerregistry.azurecr.io/pfp_pfp_server:latest
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
          volumeMounts:
            - name: secret-volume
              mountPath: /etc/k8s_secrets
          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"
      volumes:
        - name: secret-volume
          secret:
            secretName: backend-secret
