k8s/client.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pfp-pfp-client
spec:
  selector:
    app: pfp-pfp-client
    tier: backend
  ports:
  - protocol: TCP
    port: 80
    targetPort: http
