k8s/loadbalancer.service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pfp-pfp-server-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: pfp-pfp-server
  ports:
  - protocol: TCP
    port: 80
    targetPort: 8080
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: pfp-pfp-client-loadbalancer
# spec:
#   type: LoadBalancer
#   selector:
#     app: pfp-pfp-client
#   ports:
#   - protocol: TCP
#     port: 80
#     targetPort: 3001
