k8s/finch-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: finch-ingress
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
    nginx.ingress.kubernetes.io/use-regex: "true"
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts:
        - finchapp.eastus.cloudapp.azure.com
      secretName: tls-secret
  rules:
    - host: finchapp.eastus.cloudapp.azure.com
      http:
        paths:
          - backend:
              serviceName: pfp-pfp-server
              servicePort: 8080
            path: /api/?(.*)
          - backend:
              serviceName: pfp-pfp-client
              servicePort: 80
            path: /(.*)
